Added some identifying classes to detail page sections.
Makes for easier styling. A little cleanup for consistency is
also included.

Change-Id: Id5492ed61fcc93ad83e7142c7840a462bf8f9e85

--- a/horizon/dashboards/nova/templates/nova/images_and_snapshots/images/_detail_overview.html
+++ b/horizon/dashboards/nova/templates/nova/images_and_snapshots/images/_detail_overview.html
@@ -2,7 +2,7 @@
 
 <h3>{% trans "Image Overview" %}</h3>
 
-<div class="info row-fluid">
+<div class="info row-fluid detail">
   <h4>{% trans "Info" %}</h4>
   <hr class="header_rule">
   <dl>
@@ -23,7 +23,7 @@
   </dl>
 </div>
 
-<div class="specs row-fluid">
+<div class="specs row-fluid detail">
   <h4>{% trans "Specs" %}</h4>
   <hr class="header_rule">
   <dl>
@@ -36,7 +36,7 @@
   </dl>
 </div>
 
-<div class="properties row-fluid">
+<div class="properties row-fluid detail">
   <h4>{% trans "Custom Properties" %}</h4>
   <hr class="header_rule">
   <dl>
