--- a/horizon/dashboards/nova/templates/nova/instances_and_volumes/instances/detail.html
+++ b/horizon/dashboards/nova/templates/nova/instances_and_volumes/instances/detail.html
@@ -25,7 +25,10 @@
     });
 
     setInterval(function() {
-      horizon.instances.getConsoleLog($("#tail_length"), false);
+      // Don't poll for something that's not there...
+      if ($("#tail_length").length) {
+        horizon.instances.getConsoleLog($("#tail_length"), false);
+      }
     }, 10000);
   </script>
 {% endblock %}
