Common table functions are now run on modal.show
When a modal windows is displayed, a set of
functions need to be executed, to perform
some additional processing on the tables
in the modal like check-all checkbox,
table sorting, etc.

Fixes bug 997670

Change-Id: I1fdd2d55ccaa184d5fb34e4c0fed7455dee6b0d3

--- a/openstack_dashboard/templates/base.html
+++ b/openstack_dashboard/templates/base.html
@@ -27,5 +27,6 @@
     {% block js %}
       {% include "_scripts.html" %}
     {% endblock %}
+    <div class="modal_wrapper" />
   </body>
 </html>
