Improved message handling.
  * Login page no longer displays user messages
    inappropriately. Instead, login errors are handled
    as form errors. Fixes bug 1012467.
  * Messages triggered during an AJAX call are no longer
    added to the standard message queue (which causes
    them to appear on subsequent unrelated requests).
    Instead, they are encoded and sent back with the AJAX
    response, allowing them to be displayed to the user
    client-side when they are relevant.
    Fixes bug 1008799.
  * Adds the last couple "compress" tags to the
    _scripts.html template to completely implement
    blueprint asset-compression.

Change-Id: I967f32b44603ded7ec95bd0b86e7d997c6a8b352

--- a/openstack_dashboard/static/dashboard/less/horizon.less
+++ b/openstack_dashboard/static/dashboard/less/horizon.less
@@ -1,3 +1,5 @@
+@import "../../bootstrap/less/bootstrap.less";
+
 /* new clearfix */
 .clearfix:after {
     visibility: hidden;
@@ -434,6 +436,25 @@ small {
 table form {
     margin-bottom: 0;
     width: 1px;
+}
+
+.messages {
+  position: absolute;
+  z-index: 9999;
+  top: 20px;
+  right: 20px;
+  width: 300px;
+  .alert-block {
+    -webkit-box-shadow: 0 3px 7px rgba(0, 0, 0, 0.3);
+    -moz-box-shadow: 0 3px 7px rgba(0, 0, 0, 0.3);
+    box-shadow: 0 3px 7px rgba(0, 0, 0, 0.3);
+    &.alert-error {
+      border: 1px solid @red;
+    }
+    &.alert-success {
+      border: 1px solid @green;
+    }
+  }
 }
 
 .alert-block .alert-actions {
