--- a/openstack_dashboard/templates/_scripts.html
+++ b/openstack_dashboard/templates/_scripts.html
@@ -1,3 +1,6 @@
+{% load compress %}
+
+{% compress js %}
 {% comment %} jQuery and Plugins {% endcomment %}
 <script src='{{ STATIC_URL }}horizon/js/jquery/jquery.min.js' type='text/javascript' charset="utf-8"></script>
 <script src="{{ STATIC_URL }}horizon/js/spin.js" type="text/javascript" charset="utf-8"></script>
@@ -25,6 +28,7 @@
 <script src='{{ STATIC_URL }}horizon/js/forms.js' type='text/javascript' charset='utf-8'></script>
 <script src='{{ STATIC_URL }}horizon/js/form_examples.js' type='text/javascript' charset='utf-8'></script>
 <script src='{{ STATIC_URL }}horizon/js/quotas.js' type='text/javascript' charset='utf-8'></script>
+{% endcompress %}
 
-{% comment %} Client-side Templates {% endcomment %}
+{% comment %} Client-side Templates (These should *not* be inside the "compress" tag.) {% endcomment %}
 {% include "horizon/client_side/templates.html" %}
