Adds warning banner for admin users in project dash.
This is a bandaid until the underlying bugs in Nova get fixed.

Fixes bug 968696.

Change-Id: I735453482023dabc28069a4a8796aa43001f1891

--- a/openstack_dashboard/static/dashboard/less/horizon.less
+++ b/openstack_dashboard/static/dashboard/less/horizon.less
@@ -1193,3 +1193,25 @@ label.log-length {
 .split_five div.control-group select {
   width: 120px;
 }
+
+.warning {
+  background-color: @errorBackground;
+  border-bottom: 1px solid @red;
+  padding: 5px 10px;
+  .warning-text {
+    text-align: center;
+    h3, a {
+      display: inline-block;
+    }
+    h3 {
+      vertical-align: bottom;
+    }
+  }
+}
+#admin_warning_detail {
+  ul {
+    list-style: circle;
+    padding-left: 20px;
+    margin-bottom: 10px;
+  }
+}
