--- a/horizon/dashboards/nova/templates/nova/base.html
+++ b/horizon/dashboards/nova/templates/nova/base.html
@@ -1,4 +1,20 @@
 {% extends 'base.html' %}
+{% load i18n %}
+
+{% block content %}
+{% if request.user.is_admin %}
+<div class="warning">
+  <div class="warning-text">
+    <h3 class="alert-error">
+        <strong>{% trans "Caution" %}:</strong>
+        <span>{% trans "You are acting as an admin user in the project dashboard." %}</span>
+    </h3>
+    <a href="{% url horizon:nova:overview:warning %}" class="btn btn-small btn-danger ajax-modal">{% trans "Learn More" %}</a>
+  </div>
+</div>
+{% endif %}
+{{ block.super }}
+{% endblock %}
 
 {% block sidebar %}
   {% include 'horizon/common/_sidebar.html' %}
