--- a/horizon/dashboards/nova/containers/templates/containers/upload.html
+++ b/horizon/dashboards/nova/containers/templates/containers/upload.html
@@ -7,7 +7,7 @@
 {% endblock page_header %}
 
 {% block dash_main %}
-    {% include 'nova/objects/_upload.html' %}
+    {% include 'nova/containers/_upload.html' %}
 {% endblock %}
 
 
