Reduced height of modal dialog textareas in dashboard
Bug #1016317

Change-Id: Iaab30398f2a667b5a38b5f99f6b84870b43b3331

--- a/openstack_dashboard/static/dashboard/less/horizon.less
+++ b/openstack_dashboard/static/dashboard/less/horizon.less
@@ -728,6 +728,9 @@ form.horizontal fieldset {
 .modal-body fieldset .form-field select {
   width: 308px;
 }
+.modal-body fieldset .form-field textarea {
+  height: @baseLineHeight * 2;
+}
 
 .modal-footer input {
     width: auto;
