--- a/horizon/dashboards/nova/templates/nova/overview/usage.html
+++ b/horizon/dashboards/nova/templates/nova/overview/usage.html
@@ -1,5 +1,5 @@
 {% extends 'nova/base.html' %}
-{% load i18n parse_date sizeformat %}
+{% load i18n %}
 {% block title %}Instance Overview{% endblock %}
 
 {% block page_header %}
