--- a/horizon/templates/horizon/_nav_list.html
+++ b/horizon/templates/horizon/_nav_list.html
@@ -3,7 +3,7 @@
 <div class='clearfix'>
   <ul class="nav nav-tabs">
     {% for component in components %}
-      {% if user|can_haz:component %}
+      {% if user|has_permissions:component %}
         <li{% if current.slug == component.slug %} class="active"{% endif %}>
           <a href="{{ component.get_absolute_url }}" tabindex='1'>{{ component.name }}</a>
         </li>
