--- a/openstack_dashboard/templates/base.html
+++ b/openstack_dashboard/templates/base.html
@@ -8,6 +8,7 @@
     {% block css %}
       {% include "_stylesheets.html" %}
     {% endblock %}
+    {% include "horizon/client_side/_script_loader.html" %}
   </head>
   <body id="{% block body_id %}{% endblock %}">
     {% block content %}
