Tweaking admin warning dialog HTML.
Change-Id: I7a252bd9b265dea9245d1b7673946c2bfad07902

--- a/horizon/dashboards/nova/templates/nova/_warning.html
+++ b/horizon/dashboards/nova/templates/nova/_warning.html
@@ -17,7 +17,13 @@
     </ul>
     <p>{% blocktrans %}This is only a list of the reported inconsistencies. There may be others.{% endblocktrans %}</p>
     <p><strong>{% blocktrans %}The recommended practice until this problem is resolved is to keep your admin users and regular users separate. Create an "admin" project that admin users have access to, and do not grant your admin users the admin role on any other projects.{% endblocktrans %}</strong></p>
-    <p>{% blocktrans %}To follow the status of this bug, take a look at the following items on launchpad:{% endblocktrans %} <a href="https://bugs.launchpad.net/horizon/+bug/967882">BUG: Scoping problems for Nova resources</a>, <a href="https://bugs.launchpad.net/horizon/+bug/968696">BUG: "Admin"-ness not properly scoped</a>, <a href="https://blueprints.launchpad.net/nova/+spec/differentiate-admin">BLUEPRINT: Differentiate system-wide admins</a>.</p>
+    <p>{% blocktrans %}To follow the status of this bug, take a look at the following items on launchpad:{% endblocktrans %}
+      <ul>
+        <li><a href="https://bugs.launchpad.net/horizon/+bug/967882">BUG: Scoping problems for Nova resources</a></li>
+        <li><a href="https://bugs.launchpad.net/horizon/+bug/968696">BUG: "Admin"-ness not properly scoped</a></li>
+        <li><a href="https://blueprints.launchpad.net/nova/+spec/differentiate-admin">BLUEPRINT: Differentiate system-wide admins</a></li>
+      </ul>
+    </p>
     <p>{% blocktrans %}Thank you for reading this warning and operating your cloud responsibly.{% endblocktrans %}</p>
   </div>
   <div class="modal-footer">
