--- a/horizon/dashboards/nova/instances_and_volumes/templates/instances_and_volumes/instances/_detail_overview.html
+++ b/horizon/dashboards/nova/instances_and_volumes/templates/instances_and_volumes/instances/_detail_overview.html
@@ -19,6 +19,8 @@
   <h4>{% trans "Specs" %}</h4>
   <hr class="header_rule">
   <dl>
+    <dt>{% trans "Flavor" %}</dt>
+    <dd>{{ instance.full_flavor.name }}</dd>
     <dt>{% trans "RAM" %}</dt>
     <dd>{{ instance.full_flavor.ram|mbformat }}</dd>
     <dt>{% trans "VCPUs" %}</dt>
