Check for quota data before trying to use it in JS.
Fixes bug 1019086.

Change-Id: I1657db433b9ae2b9376f3d9e307580a6d32e1b7e

--- a/horizon/dashboards/nova/instances_and_volumes/templates/instances_and_volumes/instances/_launch_details_help.html
+++ b/horizon/dashboards/nova/instances_and_volumes/templates/instances_and_volumes/instances/_launch_details_help.html
@@ -44,10 +44,10 @@
 
 <script type="text/javascript" charset="utf-8">
   if(typeof horizon !== 'undefined') {
-    horizon.Quota.initWithFlavors({{ flavors|safe }});
+    horizon.Quota.initWithFlavors({{ flavors|safe|default:"{}" }});
   } else {
     addHorizonLoadEvent(function() {
-      horizon.Quota.initWithFlavors({{ flavors|safe }});
+      horizon.Quota.initWithFlavors({{ flavors|safe|default:"{}" }});
     });
   }
 </script>
