Summation rows handle None correctly.
Fixes bug 1010220.

Change-Id: Ib39520c131f4c27843deaee5d737e87e2cb35906

--- a/openstack_dashboard/static/dashboard/less/horizon.less
+++ b/openstack_dashboard/static/dashboard/less/horizon.less
@@ -404,6 +404,11 @@ a.current_item:hover h3, a.current_item:hover h4 {
 .table th.headerSortUp {
   background-image: url(/static/dashboard/img/up_arrow.png);
 }
+.table tr.summation td:first-child,
+.table tr.summation td:last-child {
+  border-radius: 0;
+  border-bottom: 0 none;
+}
 
 th {
   background: #f1f1f1;
