--- a/horizon/dashboards/settings/user/templates/user/settings.html
+++ b/horizon/dashboards/settings/user/templates/user/settings.html
@@ -1,11 +1,11 @@
 {% extends 'settings/base.html' %}
 {% load i18n %}
-{% block title %}User Settings{% endblock %}
+{% block title %}{% trans "User Settings" %}{% endblock %}
 
 {% block page_header %}
-  {% include "horizon/common/_page_header.html" with title=_("Dashboard Settings") %}
+  {% include "horizon/common/_page_header.html" with title=_("User Settings") %}
 {% endblock page_header %}
 
 {% block settings_main %}
-  {% include "settings/user/_language.html" %}
+  {% include "settings/user/_settings.html" %}
 {% endblock %}
