--- a/horizon/templates/horizon/common/_data_table.html
+++ b/horizon/templates/horizon/common/_data_table.html
@@ -1,6 +1,7 @@
 {% load i18n %}
+{% with table.needs_form_wrapper as needs_form_wrapper %}
 <div class="table_wrapper">
-  <form action="{{ table.get_absolute_url }}" method="POST">{% csrf_token %}
+  {% if needs_form_wrapper %}<form action="{{ table.get_absolute_url }}" method="POST">{% csrf_token %}{% endif %}
   {% with columns=table.get_columns rows=table.get_rows %}
   <table id="{{ table.name }}" class="table table-bordered table-striped">
     <thead>
@@ -49,5 +50,6 @@
     </tfoot>
   </table>
   {% endwith %}
-  </form>
+  {% if needs_form_wrapper %}</form>{% endif %}
 </div>
+{% endwith %}
