Initial support of Quantum V2.
Implementes blueprint quantum-horizon and blueprint readd-quantum-support.
This commit also covers blueprint quantum-workflow-integration.

- Added quantum API layer,
- Added network/subnet/port CRUD operations,
- Added 'Network' user panel,
- Added 'Network' system panel,
- Added 'Networking' tab in instance creation workflow.
- Supported launching an instance with specified network(s)

Change-Id: I7ad608e17cb6fb4f0de02721888e96a68cf926e8

--- a/openstack_dashboard/static/dashboard/less/horizon.less
+++ b/openstack_dashboard/static/dashboard/less/horizon.less
@@ -701,14 +701,14 @@ form.horizontal fieldset {
 .workflow td.actions {
   vertical-align: top;
   width: 308px;
-  padding-left: 10px;
+  padding-right: 10px;
 }
 
 .workflow td.help_text {
   vertical-align: top;
   width: 340px;
-  padding-right: 10px;
-  border-right: 1px solid #DDD;
+  padding-left: 10px;
+  border-left: 1px solid #DDD;
 }
 
 .workflow fieldset > table {
