--- a/horizon/dashboards/nova/volumes/templates/volumes/_create.html
+++ b/horizon/dashboards/nova/volumes/templates/volumes/_create.html
@@ -2,7 +2,7 @@
 {% load i18n horizon humanize %}
 
 {% block form_id %}{% endblock %}
-{% block form_action %}{% url horizon:nova:volumes:create %}{% endblock %}
+{% block form_action %}{% url horizon:nova:volumes:create %}?{{ request.GET.urlencode }}{% endblock %}
 
 {% block modal_id %}create_volume_modal{% endblock %}
 {% block modal-header %}{% trans "Create Volume" %}{% endblock %}
