Fix for quota initialization scripts
when rendered in a non-modal window -
create instance/volume pages

Fixes bug 1025482

Change-Id: I0a528b89d4e207c5a11126046d9b1e3c18f2cf51

--- a/horizon/dashboards/nova/instances/templates/instances/_launch_details_help.html
+++ b/horizon/dashboards/nova/instances/templates/instances/_launch_details_help.html
@@ -43,7 +43,7 @@
 </div>
 
 <script type="text/javascript" charset="utf-8">
-  if(typeof horizon !== 'undefined') {
+  if(typeof horizon.Quota !== 'undefined') {
     horizon.Quota.initWithFlavors({{ flavors|safe|default:"{}" }});
   } else {
     addHorizonLoadEvent(function() {
