--- a/horizon/dashboards/nova/volumes/templates/volumes/_create.html
+++ b/horizon/dashboards/nova/volumes/templates/volumes/_create.html
@@ -41,7 +41,7 @@
   </div>
 
   <script type="text/javascript" charset="utf-8">
-    if(typeof horizon !== 'undefined') {
+    if(typeof horizon.Quota !== 'undefined') {
       horizon.Quota.init();
     } else {
       addHorizonLoadEvent(function() {
