Fixed/enabled selenium tests.
Moved the tests to the horizon portion since they test core functionality.
This also required moving some of the templates, etc. that belong in horizon
to their proper homes.

Change-Id: I7d9758845b81e4b8bcf1ffaaff4f6e237b4fe9f8

--- a/openstack_dashboard/static/dashboard/less/horizon.less
+++ b/openstack_dashboard/static/dashboard/less/horizon.less
@@ -1,4 +1,4 @@
-@import "../../bootstrap/less/bootstrap.less";
+@import "../../../../horizon/static/bootstrap/less/bootstrap.less";
 
 /* new clearfix */
 .clearfix:after {
