--- a/openstack_dashboard/static/dashboard/less/horizon.less
+++ b/openstack_dashboard/static/dashboard/less/horizon.less
@@ -1,4 +1,4 @@
-@import "../../../../horizon/static/bootstrap/less/bootstrap.less";
+@import "../../bootstrap/less/bootstrap.less";
 
 /* new clearfix */
 .clearfix:after {
