project workflow: project membership UI
* Update Project workflow now includes a tab to update project members
* Can add/remove existing users from project and update roles
* Can add a new user via inline object creation
* Can filter both lists!
* Changed css/jquery to make things appear more like other tables
* Fixed a few JS bugs
* "Fixed" exception handling for now, although it naively redirects the
   user out of the workflow

partially implements blueprint tenant-creation-workflow

Change-Id: I38589bf3ee4c33c49df982417d995c141f4e6709

--- a/horizon/templates/horizon/_scripts.html
+++ b/horizon/templates/horizon/_scripts.html
@@ -30,6 +30,7 @@
 <script src='{{ STATIC_URL }}horizon/js/horizon.tabs.js' type='text/javascript' charset='utf-8'></script>
 <script src='{{ STATIC_URL }}horizon/js/horizon.templates.js' type='text/javascript' charset='utf-8'></script>
 <script src='{{ STATIC_URL }}horizon/js/horizon.utils.js' type='text/javascript' charset='utf-8'></script>
+<script src='{{ STATIC_URL }}horizon/js/horizon.projects.js' type='text/javascript' charset='utf-8'></script>
 {% endcompress %}
 
 {% comment %} Client-side Templates (These should *not* be inside the "compress" tag.) {% endcomment %}
