Cleans up instance log page, form, HTML/styles...
Change-Id: If72a2057218b09fd48e41a02e3818c79523a22c4

--- a/openstack_dashboard/static/dashboard/less/horizon.less
+++ b/openstack_dashboard/static/dashboard/less/horizon.less
@@ -806,6 +806,9 @@ form.horizontal fieldset {
 
 .form-inline {
   display: inline;
+  input, button, a.btn {
+    margin-left: 5px;
+  }
 }
 
 td.select {
