--- a/horizon/dashboards/nova/instances/templates/instances/_detail_log.html
+++ b/horizon/dashboards/nova/instances/templates/instances/_detail_log.html
@@ -1,16 +1,14 @@
 {% load i18n %}
 
 <div class="clearfix">
-  <h3 class="pull-left">Instance Console Log</h3>
-  <p class="pull-right">
+  <h3 class="pull-left">{% trans "Instance Console Log" %}</h3>
+
+  <form id="tail_length" action="{% url horizon:nova:instances:console instance.id %}" class="form-inline pull-right">
+    <label for="tail_length_select">{% trans "Log Length" %}</label>
+    <input class="span1" type="text" name="length" value="35" />
+    <button class="btn btn-small btn-primary" type="submit">{% trans "Go" %}</button>
     {% url horizon:nova:instances:console instance.id as console_url %}
     <a class="btn btn-small" target="_blank" href="{{ console_url }}">{% trans "View Full Log" %}</a>
-  </p>
-
-  <form id="tail_length" action="{% url horizon:nova:instances:console instance.id %}" class="span3 pull-right">
-    <label class="pull-left log-length" for="tail_length_select">Log Length</label>
-    <input class="span1" type="text" name="length" value="35" />
-    <input value="Go" class="btn-small btn-primary" type="submit" />
   </form>
 </div>
 
