Adds ResourceBrowser and ResourceBrowserView class
related: blueprint swift-ui-improvements

Provides new API for building browser for navigation,
as well as new look and feel in CSS.
Applies it to container panel of the nova dashboard.

Change-Id: Iecd984263bae7c3774a0630639f645cee4cffca9

--- a/horizon/templates/horizon/common/_data_table.html
+++ b/horizon/templates/horizon/common/_data_table.html
@@ -11,11 +11,13 @@
           {{ table.render_table_actions }}
         </th>
       </tr>
+      {% if not table.is_browser_table %}
       <tr>
         {% for column in columns %}
           <th {{ column.attr_string|safe }}>{{ column }}</th>
         {% endfor %}
       </tr>
+      {% endif %}
     </thead>
     <tbody>
     {% for row in rows %}
