--- a/horizon/dashboards/nova/containers/templates/containers/_copy.html
+++ b/horizon/dashboards/nova/containers/templates/containers/_copy.html
@@ -20,5 +20,5 @@
 
 {% block modal-footer %}
     <input class="btn btn-primary pull-right" type="submit" value="{% trans "Copy Object" %}" />
-    <a href="{% url horizon:nova:containers:object_index container_name %}" class="btn secondary cancel close">{% trans "Cancel" %}</a>
+    <a href="{% url horizon:nova:containers:index container_name|add:'/' %}" class="btn secondary cancel close">{% trans "Cancel" %}</a>
 {% endblock %}
