--- a/horizon/dashboards/nova/containers/templates/containers/index.html
+++ b/horizon/dashboards/nova/containers/templates/containers/index.html
@@ -3,9 +3,25 @@
 {% block title %}Containers{% endblock %}
 
 {% block page_header %}
-  {% include "horizon/common/_page_header.html" with title=_("Containers") %}
+  <div class='page-header'>
+    <h2>{% trans "Container" %}
+      {% if subfolders %}
+        : <a href="{% url horizon:nova:containers:index container_name|add:'/' %}">{{container_name}}</a>
+        <small>/</small>
+      {% elif container_name %}
+        : {{container_name}}
+      {% endif %}
+      {% for subfolder, path in subfolders %}
+        <small>
+        {% if not forloop.last %}
+          <a href="{% url horizon:nova:containers:index container_name|add:'/' path %}">
+        {% endif %}{{ subfolder }}{% if not forloop.last %}</a> /{% endif %}
+        </small>
+      {% endfor %}
+    </h2>
+  </div>
 {% endblock page_header %}
 
 {% block main %}
-  {{ table.render }}
+  {{ swift_browser.render }}
 {% endblock %}
