--- a/horizon/dashboards/nova/volumes/templates/volumes/_attach.html
+++ b/horizon/dashboards/nova/volumes/templates/volumes/_attach.html
@@ -3,19 +3,23 @@
 
 {% block form_id %}attach_volume_form{% endblock %}
 {% block form_action %}{% url horizon:nova:volumes:attach volume.id %}{% endblock %}
-{% block form_class %}{{ block.super }} horizontal split_half{% endblock %}
+{% block form_class %}{{ block.super }} horizontal {% if show_attach %}split_half{% else %} no_split{% endif %}{% endblock %}
 
 {% block modal_id %}attach_volume_modal{% endblock %}
 {% block modal-header %}{% trans "Manage Volume Attachments" %}{% endblock %}
 
 {% block modal-body %}
+    {% if show_attach %}
     <h3>{% trans "Attach To Instance" %}</h3>
     <fieldset>
     {% include "horizon/common/_form_fields.html" %}
     </fieldset>
+    {% endif %}
 {% endblock %}
 
 {% block modal-footer %}
-    <input class="btn btn-primary pull-right" type="submit" value="{% trans "Attach Volume" %}" />
+    {% if show_attach %}
+        <input class="btn btn-primary pull-right" type="submit" value="{% trans "Attach Volume" %}" />
+    {% endif %}
     <a href="{% url horizon:nova:volumes:index %}" class="btn secondary cancel close">{% trans "Cancel" %}</a>
 {% endblock %}
